--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "reactstrap": "^9.1.5",
     "stripe": "^10.12.0-beta.1",
     "styled-components": "^5.2.1",
-    "waait": "^1.0.5",
-    "webpack": "^5.74.0"
+    "waait": "^1.0.5"
   },
   "devDependencies": {
     "@apollo/react-testing": "^4.0.0",
@@ -63,7 +62,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
-    "react-test-renderer": "^17.0.1"
+    "react-test-renderer": "^17.0.1",
+    "webpack": "^5.74.0"
   },
   "eslintConfig": {
     "extends": [
