--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Indie Bubba - Buy and sell babywear",
   "main": "index.js",
+  "engines" : { 
+    "node" : "18.12.0"
+  }
+
   "scripts": {
     "dev": "next -p 7777",
     "build": "next build",
