--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "next -p 7777",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 7777",
     "test": "NODE_ENV=test jest --watch"
   },
   "author": "Martyn Clinton",
