--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "dev": "next -p 7777",
     "build": "next build",
-    "start": "next start -p 7777",
-    "test": "NODE_ENV=test jest --watch"
+    "start": "next start"
   },
   "author": "Martyn Clinton",
   "license": "ISC",
