--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.2.3",
     "date-fns": "^2.16.1",
     "downshift": "^6.0.6",
+    "express": "^4.18.2",
     "graphql": "16.0.1",
     "graphql-tag": "^2.11.0",
     "graphql-upload": "^11.0.0",
