--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "next -p 7777",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production node server.js"
+    "start": "next start -p $PORT"
   },
   "author": "Martyn Clinton",
   "license": "ISC",
